# poc-docker-secure-network

./: .gitignore  Dockerfile  entrypoint.sh  integration.md  logic.js  options.md  proxy.js  run.sh  shim.js
.copilot_here/: mounts.conf
copilot-config/: rules.json
docs/: integration-with-copilot-here-options.md
logs/: traffic.jsonl
node-proxy/: check-forge.js  entrypoint.sh  proxy.js  test-connect.js
prison-network/: Dockerfile.app  Dockerfile.proxy  README.md  app-entrypoint.sh  docker-compose.yml  proxy-entrypoint.sh  run.sh
prison-network/config/: rules.json
prison-network/src/: main.rs
rust-proxy/: Cargo.toml  Dockerfile  entrypoint.sh  run.sh
rust-proxy/src/: main.rs
